syntax = "proto3";

package user;

service user {
  rpc GetUserInfo(GetUserInfoRequest) returns (UserInfo);
  rpc CreateUser(CreateUserRequest) returns (UserInfo);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetAccessToken(GetTokenRequest) returns (GetAccessTokenResponse);
  rpc GetRefreshToken(GetTokenRequest) returns (GetRefreshTokenResponse);
  rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse);
  rpc GetUserByAccessToken(GetUserByAccessTokenRequest) returns (GetUserByAccessTokenResponse);
  rpc CreateApp(CreateAppRequest) returns (CreateAppResponse);
  rpc GetAppInfo(GetAppInfoRequest) returns (GetAppInfoResponse);
  rpc GetOAuthCode(GetOAuthCodeRequest) returns (GetOAuthCodeResponse);
  rpc GetTokenFromCode(GetTokenFromCodeRequest) returns (GetTokenFromCodeResponse);
}

message GetUserInfoRequest {
  string uid = 1;
}

message UserInfo {
  string uid = 1;
  string username = 2;
  bool isAdmin = 3;
}

message CreateUserRequest {
  string token = 1;
  string username = 2;
  string password = 3;
}

message UpdateUserRequest {
  string userToken = 1;
  string uid = 2;
  string password = 3;
}

message UpdateUserResponse {

}

message DeleteUserRequest {
  string userToken = 1;
  string uid = 2;
}

message DeleteUserResponse {

}

message GetTokenRequest {
  string username = 1;
  string password = 2;
}

message GetAccessTokenResponse {
  string token = 1;
  string uid = 2;
}

message GetUserByAccessTokenRequest {
  string userToken = 1;
}

message GetUserByAccessTokenResponse {
  string uid = 1;
}

message GetRefreshTokenResponse {
  string token = 1;
}

message RefreshAccessTokenRequest {
  string refreshToken = 1;
}

message RefreshAccessTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message CreateAppRequest {
  string owner = 1;
  string name = 2;
}

message CreateAppResponse {
  string id = 1;
  string secret = 2;
}

message GetAppInfoRequest {
  string id = 1;
}

message GetAppInfoResponse {
  string owner = 1;
  string name = 2;
}

message GetOAuthCodeRequest {
  string appUid = 1;
  string username = 2;
  string password = 3;
}

message GetOAuthCodeResponse {
  string code = 1;
}

message GetTokenFromCodeRequest {
  string code = 1;
  string appUid = 2;
  string appSecret = 3;
}

message GetTokenFromCodeResponse {
  string accessToken = 1;
  string refreshToken = 2;
}